infrastructure/base/traefik-external/traefik.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-external-system
  labels:
    networking.tinyrack.net/isolation: enabled
