infrastructure/base/traefik-external/traefik.cloudflare.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external-cloudflare
  namespace: traefik-external-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-external-traefik-external-system
    app.kubernetes.io/name: traefik
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: cloudflare
