infrastructure/base/traefik-external/proxy-egress.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-traefik-external-proxy-egress
  namespace: traefik-external-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.8/32
        toPorts:
          - ports:
              - port: "2283"
                protocol: TCP
