infrastructure/base/traefik-external/traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-traefik-external
  namespace: traefik-external-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    ingress:
      - fromEntities:
          - world
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "8443"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cloudflared-system
              pod: cloudflared
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: wg-easy-system
              app.kubernetes.io/name: wg-easy
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
              app.kubernetes.io/name: postgresql
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: longhorn-system
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: monitoring-system
        toPorts:
          - ports:
              - port: "3000"
                protocol: TCP
              - port: "8428"
                protocol: TCP
              - port: "9428"
                protocol: TCP
              - port: "10428"
                protocol: TCP
              - port: "4318"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: beszel-system
              app: beszel
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: beszel-system
              app: beszel
        toPorts:
          - ports:
              - port: "8090"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: issuary-system
              app: issuary
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: karakeep-system
              app: karakeep-web
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: karakeep-system
              app: karakeep-web
        toPorts:
          - ports:
              - port: "3000"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: n8n-system
              app: n8n
        toPorts:
          - ports:
              - port: "5678"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: openwebui-system
              app.kubernetes.io/component: open-webui
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: openwebui-system
              app.kubernetes.io/component: open-webui
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.8/32
        toPorts:
          - ports:
              - port: "3900"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.8/32
        toPorts:
          - ports:
              - port: "8087"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: searxng-system
              app: searxng
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-external-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: home-assistant-system
              app: home-assistant
        toPorts:
          - ports:
              - port: "8123"
                protocol: TCP
